--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ background-color: var(--rosa);
 font-family: 'Dawning of a New Day', cursive;
 font-weight: lighter;
 color: var(--grisclaro);
+padding: 1rem;
 }
 .titulo {
 font-family: 'Titillium Web', sans-serif;   
@@ -129,9 +130,9 @@ text-decoration: none;
 font-size: 2rem;
 padding: 3rem;
 }
-@media (max-width: 480px) {
+@media (max-width: 768px) {
 .navegacion-principal a {
-padding: 2px;
+padding: 1rem;
 }
 }
 .navegacion-principal a:hover {
@@ -217,8 +218,11 @@ background-color: var(--verde);
 }
 
 /*formulario de contacto*/
+.contacto {
+margin-top: 3rem;
+}
 .formulario {
-background-color: var(--rosa);
+background-color: var(--gris);
 width: min(60rem,100%);
 margin: 0 auto;
 padding: 2rem;
@@ -233,7 +237,7 @@ font-size: 2rem;
 text-transform: uppercase;
 font-weight: 500;
 margin-bottom: 2rem;
-color: #595a5b;
+color: var(--celeste);
 }
 @media (min-width: 768px) {
 .contenedor-campos {
@@ -251,7 +255,8 @@ grid-column: 1 / 3;
 margin-bottom: 1rem;
 }
 .campo label {
-color: var(--gris);
+color: var(--rosa);
+letter-spacing: 1pt;
 font-weight: 500;
 margin-bottom: .5rem;
 display: block;
@@ -267,7 +272,12 @@ background-color: var(--grisclaro);
 }
 .campo textarea {
 height: 20rem;
-}
+} /*Fin de formulario de contacto*/
 .footer {
+background-color: var(--rosa);
 text-align: center;
+color: var(--grisclaro);
+letter-spacing: 1pt;
+margin-top: 3rem;
+padding: 3rem;
 }
