--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-:root{
+:root{/*Colores de la marca*/
 --verde: #4ec79a;
 --celeste: #4cc5d8;
 --rosa: #f590b2;
@@ -19,8 +19,12 @@ box-sizing: border-box;
 scroll-snap-type: y proximity;
 }
 .servicios,
-.navegacion-principal
-.formulario {
+.hero,
+.navegacion-principal,
+.formulario,
+.sobre-mi,
+.proyectos,
+.contacto {
 scroll-snap-align:center;
 scroll-snap-stop: always;
 }
@@ -29,7 +33,7 @@ font-size: 16px;
 font-family: 'Titillium Web', sans-serif;
 background-image: linear-gradient(to top, var(--rosaclaro) 0%, var(--grisclaro) 100%);
 }
-.contenedor {/*aplica a todo*/
+.contenedor {/*aplica a todos los contenedores con class*/
 max-width: 120rem;
 margin: 0 auto;
 }
@@ -51,10 +55,15 @@ border: none;
 width: auto;
 }
 }
-.boton:hover{
+.boton,
+.diseño-web,
+.fotografia,
+.ecommerce,
+.sobre-mi,
+.proyecto:hover {
 cursor: pointer;
 }
-.sombra {
+.sombra { /*Aplica a todo con class*/
 -webkit-box-shadow: 0px 5px 15px 0px rgba(20,20,20,0.39);
 -moz-box-shadow: 0px 5px 15px 0px rgba(20,20,20,0.39);
 box-shadow: 0px 5px 15px 0px rgba(20,20,20,0.39);
@@ -62,7 +71,7 @@ background-color: var(--grisclaro);
 padding: 2rem;
 border-radius: 1rem;
 }
-/*tamaños fuente*/
+/*tamaños de fuente*/
 h1{
 font-size: 4rem;
 }
@@ -70,10 +79,15 @@ h2 {
 font-size: 3rem;
 font-weight: 400;
 margin-bottom: 1rem;
+margin-top: 2rem;
 }
-h3, p {
+h3 {
 font-size: 2rem;
 font-weight: 600;
+}
+p {
+font-size: 1.5rem;
+font-weight: 400;
 }
 h1, h2, h3, p {
 text-align: center;
@@ -95,6 +109,7 @@ font-family: 'Titillium Web', sans-serif;
 @media (max-width: 480px) {
 .titulo-yulia  {
 display: grid;
+justify-content: center;
 }
 }
 /*Utilidades*/
@@ -112,8 +127,8 @@ display: flex;
 .alinear-derecha {
 justify-content: flex-end;
 }
-.nav-bg {
-background-color: var(--grisclaro); /*menu de navegacion*/
+.nav-bg { /*menu de navegacion*/
+background-color: var(--grisclaro); 
 } 
 .navegacion-principal {
 display: flex;
@@ -154,7 +169,7 @@ margin-bottom: 2rem;
 }
 @media (max-width: 768px) {
 .hero {
-background-position: 100% 0;
+background-position: 70% 0;
 }
 }
 .contenido-hero {
@@ -177,12 +192,26 @@ color: var(--grisclaro);
 color: #595a5b;
 font-weight: 500;
 }
+.diseño-web:hover, /*Sombra <hover> a contenedor*/
+.fotografia:hover,
+.ecommerce:hover,
+#sobre-mi:hover, 
+.proyecto:hover {
+-webkit-box-shadow: 0px 0px 10px 5px rgba(89,90,91,0.75);
+-moz-box-shadow: 0px 0px 10px 5px rgba(89,90,91,0.75);
+box-shadow: 0px 0px 10px 5px rgba(89,90,91,0.75);
+}
 .servicios img {
 display: flex;
 margin: auto;
 }
 .servicios h3 {
 line-height: 2;
+box-shadow: none;
+color: #595a5b;
+}
+.servicios p {
+color: var(--gris);
 }
 @media (min-width: 1025px) {
 .servicios {
@@ -192,11 +221,8 @@ column-gap: 2rem;
 margin: 0 20rem;
 }
 }
-@media (min-width: 769px) {
+@media (min-width: 768px) {
 .servicios {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-column-gap: 2rem;
 margin: 0 5rem;
 }
 }
@@ -204,15 +230,16 @@ margin: 0 5rem;
 .servicios {
 display: flex;
 flex-direction: column;
-row-gap: 2rem;
-margin: 1rem 4rem;
+margin: 1rem 2rem;
 }
 }
 .diseño-web{
 background-color: var(--violeta);
+margin-bottom: 2rem;
 }
 .fotografia {
 background-color: var(--celeste);
+margin-bottom: 2rem;
 }
 .ecommerce {
 background-color: var(--verde);
@@ -248,6 +275,12 @@ grid-template-rows: auto;
 column-gap: 1rem;
 }  
 }
+@media (max-width: 768px) {
+.formulario {
+max-width: 90%;
+margin: 0 auto;
+}
+}
 .campo:nth-child(3),
 .campo:nth-child(4) {
 grid-column: 1 / 3;
@@ -270,10 +303,13 @@ border-radius: .5rem;
 }
 .enviar {
 background-color: var(--grisclaro);
+height: 3rem;
 }
 .campo textarea {
 height: 20rem;
-} /*Fin de formulario de contacto*/
+} 
+/*Fin de formulario de contacto*/
+
 .footer {
 background-color: var(--rosa);
 text-align: center;
@@ -282,10 +318,110 @@ letter-spacing: 1pt;
 margin-top: 3rem;
 padding: 3rem;
 }
-.sobre-mi {
-padding: 3rem;
-width: min(60rem,100%);
-margin: auto;
-text-align: center;
+
+/*Seccion Sobre mi*/
+#sobre-mi {
+background-color: var(--celeste);
+padding: 2rem;
+max-width: 88%;
+margin: 0 auto;
 letter-spacing: 1px;
+display: flex;
+}
+.sobre-mi p {
+color: var(--gris);
+}
+.hola { /*hola! soy ...*/
+color: var(--gris);
+font-size: 2.5rem;
+font-weight: bold;
+}
+.font-titulo { /*....Yulia Monti*/
+font-family: 'Dawning of a New Day', cursive;
+font-size: 4rem;
+font-weight: lighter;
+color: var(--gris);
+padding: 1rem;
+}
+@media (max-width: 768px) {
+.font-titulo{
+display: block;
+}
+}
+@media (max-width: 320px) {
+.font-titulo {
+display: block;
+font-size: 3rem;
+margin: 0 auto;
+padding: 0;
+width: 100%;
+}
+}
+.contenedor-foto img {
+display:block;
+margin: 0 auto 0 auto;
+border-radius: 1rem;
+}
+@media (max-width: 768px) {
+#sobre-mi{
+display: block;
+margin: 1rem auto;
+row-gap: 1rem;
+max-width: 88%;
+}
+.contenedor-foto{
+background-color: transparent;
+}
+.contenedor-foto .img-sobremi {
+width: 10rem;
+height: 20rem;
+display:block;
+margin: 1rem auto 1rem auto;
+border-radius: 2rem;
+}
+}
+
+/*Seccion Mis Proyectoss*/
+#proyectos {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+column-gap: 1rem;
+margin: 0 auto;
+max-width: 88%;
+}
+#proyectos .sombra {
+padding: 1rem;
+}
+.proyecto {
+background-color: var(--rosa);
+margin: auto;
+}
+.proyecto, h3, p {
+color: var(--grisclaro);
+}
+.proyecto img {
+display: flex;
+margin: auto;
+border-radius: 2rem;
+}
+@media (min-width: 768px) {
+.proyectos {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+margin: 0 auto;
+}
+.img-proyecto-sm {
+max-width: 100%;
+}
+}
+@media (max-width: 768px ) {
+#proyectos {
+display: flex;
+flex-direction: column;
+margin: 0 auto;
+gap: 2rem;
+}
+.img-proyecto-sm {
+max-width: 100%;
+}
 }
