--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,20 @@
 --celeste: #4cc5d8;
 --rosa: #f590b2;
 --violeta: #d29bfd;
---gris: #595a5b;
+--gris: #353637;
 --grisclaro: #fafafa;
 --rosaclaro: #fdeaf2;
 }
-/*aplica a todo*/
+
 *, *:before, *:after {
 box-sizing: inherit;
 Margin: 0;
 Padding: 0;
 }
-html {/*aplica a todo*/
+html {
 font-size: 62.5%;
 box-sizing: border-box;
-scroll-snap-type: y proximity;
+scroll-snap-type:mandatory;
 }
 .servicios,
 .hero,
@@ -28,12 +28,12 @@ scroll-snap-type: y proximity;
 scroll-snap-align:center;
 scroll-snap-stop: always;
 }
-body{/*aplica a todo*/
+body{
 font-size: 16px;
 font-family: 'Titillium Web', sans-serif;
 background-image: linear-gradient(to top, var(--rosaclaro) 0%, var(--grisclaro) 100%);
 }
-.contenedor {/*aplica a todos los contenedores con class*/
+.contenedor {
 max-width: 120rem;
 margin: 0 auto;
 }
@@ -54,6 +54,9 @@ border: none;
 .boton {
 width: auto;
 }
+}
+.contactar {
+margin-bottom: -0.5rem;
 }
 .boton,
 .diseño-web,
@@ -76,25 +79,29 @@ h1{
 font-size: 4rem;
 }
 h2 {
-font-size: 3rem;
+font-size: 3.2rem;
 font-weight: 400;
 margin-bottom: 1rem;
 margin-top: 2rem;
 }
 h3 {
-font-size: 2rem;
+font-size: 2.5rem;
 font-weight: 600;
 }
 p {
-font-size: 1.5rem;
+font-size: 1.8rem;
 font-weight: 400;
 }
-h1, h2, h3, p {
+h1, h2, h3, h4, p {
 text-align: center;
 font-family: 'Titillium Web', sans-serif;
 color: var(--gris);
 flex-direction: row;
 }
+a {
+text-decoration: none;
+}
+
 /*titulo*/
 .titulo-yulia{
 background-color: var(--rosa);
@@ -112,6 +119,7 @@ display: grid;
 justify-content: center;
 }
 }
+
 /*Utilidades*/
 .w-sm-100 { /*en pequeño que tome el 100%*/
 width: 100%;
@@ -127,34 +135,48 @@ display: flex;
 .alinear-derecha {
 justify-content: flex-end;
 }
-.nav-bg { /*menu de navegacion*/
-background-color: var(--grisclaro); 
-} 
-.navegacion-principal {
-display: flex;
-flex-direction: column;
-}
-@media (min-width: 768px) {
+
 .navegacion-principal {
 flex-direction: row;
 justify-content: space-between;
+height: 10;
 }
+
+@media (max-width: 768px) {
+.navegacion-principal {
+flex-direction: column;
+align-items: center;
+opacity: 0; 
+height: 0;
+visibility: visible;
+transition: visibility .3s ease-in-out, opacity .5s linear, height .5s linear;
 }
+} 
 .navegacion-principal a {
 color: var(--gris);
 text-decoration: none;
 font-size: 2rem;
-padding: 3rem;
-}
-@media (max-width: 768px) {
-.navegacion-principal a {
 padding: 1rem;
-}
+background-color: var(--grisclaro);
 }
 .navegacion-principal a:hover {
 background-color: var(--verde);
 font-weight: 600;
-}/*fin de menú de navegacion*/
+}
+@media (min-width: 768px)  {
+.mobile-menu  {
+display: none;
+}
+}
+.mobile-menu img {
+width: 4rem;
+}
+.mostrar {
+visibility: visible;
+opacity: 1;
+height: auto;
+}
+/*fin de menú de navegacion*/
 
 /*Sección diseño y desarrollo web + Ubicación (Rosario)*/
 .hero {
@@ -187,9 +209,9 @@ justify-content: center;
 color: var(--grisclaro);
 }
 
-/*Seccion Mis servicios*/
+/*Seccion ESTUDIO*/
 .servicios {
-color: #595a5b;
+color: var(--gris);
 font-weight: 500;
 }
 .diseño-web:hover, /*Sombra <hover> a contenedor*/
@@ -204,11 +226,13 @@ box-shadow: 0px 0px 10px 5px rgba(89,90,91,0.75);
 .servicios img {
 display: flex;
 margin: auto;
+max-width: 90%;
 }
 .servicios h3 {
 line-height: 2;
 box-shadow: none;
 color: #595a5b;
+margin: auto;
 }
 .servicios p {
 color: var(--gris);
@@ -233,6 +257,12 @@ flex-direction: column;
 margin: 1rem 2rem;
 }
 }
+@media (max-width: 768px ) {
+.habilidades {
+display: flex;
+margin: 1rem 2rem;
+}   
+}
 .diseño-web{
 background-color: var(--violeta);
 margin-bottom: 2rem;
@@ -243,72 +273,29 @@ margin-bottom: 2rem;
 }
 .ecommerce {
 background-color: var(--verde);
+margin-bottom: 2rem;
 }
 
-/*formulario de contacto*/
-.contacto {
-margin-top: 3rem;
-}
-.formulario {
-background-color: var(--gris);
-width: min(60rem,100%);
-margin: 0 auto;
-padding: 2rem;
-border-radius: 1rem;
-}
-.formulario fieldset{
-border: none;
-}
-.formulario legend {
-text-align: center;
-font-size: 2rem;
-text-transform: uppercase;
-font-weight: 500;
-margin-bottom: 2rem;
-color: var(--celeste);
-}
-@media (min-width: 768px) {
-.contenedor-campos {
+.diseño-web {
 display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: auto;
-column-gap: 1rem;
-}  
+grid-template-columns: auto auto auto auto;
+grid-template-rows: auto; 
+column-gap: 10px;
+row-gap: 15px;
 }
-@media (max-width: 768px) {
-.formulario {
-max-width: 90%;
-margin: 0 auto;
+
+.habilidades{
+grid-column-start: 1;
+grid-column-end: 5;
+grid-row-start: 1;
+grid-row-end: 3;
 }
+
+.estudio p{
+    text-align: start;
+    margin: 1rem;
 }
-.campo:nth-child(3),
-.campo:nth-child(4) {
-grid-column: 1 / 3;
-}
-.campo {
-margin-bottom: 1rem;
-}
-.campo label {
-color: var(--rosa);
-letter-spacing: 1pt;
-font-weight: 500;
-margin-bottom: .5rem;
-display: block;
-}
-.input-text {
-width: 100%;
-border: none;
-padding: 1rem;
-border-radius: .5rem;
-}
-.enviar {
-background-color: var(--grisclaro);
-height: 3rem;
-}
-.campo textarea {
-height: 20rem;
-} 
-/*Fin de formulario de contacto*/
+
 
 .footer {
 background-color: var(--rosa);
@@ -319,67 +306,6 @@ margin-top: 3rem;
 padding: 3rem;
 }
 
-/*Seccion Sobre mi*/
-#sobre-mi {
-background-color: var(--celeste);
-padding: 2rem;
-max-width: 88%;
-margin: 0 auto;
-letter-spacing: 1px;
-display: flex;
-}
-.sobre-mi p {
-color: var(--gris);
-}
-.hola { /*hola! soy ...*/
-color: var(--gris);
-font-size: 2.5rem;
-font-weight: bold;
-}
-.font-titulo { /*....Yulia Monti*/
-font-family: 'Dawning of a New Day', cursive;
-font-size: 4rem;
-font-weight: lighter;
-color: var(--gris);
-padding: 1rem;
-}
-@media (max-width: 768px) {
-.font-titulo{
-display: block;
-}
-}
-@media (max-width: 320px) {
-.font-titulo {
-display: block;
-font-size: 3rem;
-margin: 0 auto;
-padding: 0;
-width: 100%;
-}
-}
-.contenedor-foto img {
-display:block;
-margin: 0 auto 0 auto;
-border-radius: 1rem;
-}
-@media (max-width: 768px) {
-#sobre-mi{
-display: block;
-margin: 1rem auto;
-row-gap: 1rem;
-max-width: 88%;
-}
-.contenedor-foto{
-background-color: transparent;
-}
-.contenedor-foto .img-sobremi {
-width: 10rem;
-height: 20rem;
-display:block;
-margin: 1rem auto 1rem auto;
-border-radius: 2rem;
-}
-}
 
 /*Seccion Mis Proyectoss*/
 #proyectos {
@@ -394,10 +320,10 @@ padding: 1rem;
 }
 .proyecto {
 background-color: var(--rosa);
-margin: auto;
+margin: auto auto 2rem auto;
 }
 .proyecto, h3, p {
-color: var(--grisclaro);
+color: var(--gris);
 }
 .proyecto img {
 display: flex;
