--- a/css/styles.css
+++ b/css/styles.css
@@ -278,7 +278,7 @@ margin-bottom: 2rem;
 
 .diseño-web {
 display: grid;
-grid-template-columns: auto auto auto auto;
+grid-template-columns: auto auto auto auto auto;
 grid-template-rows: auto; 
 column-gap: 10px;
 row-gap: 15px;
@@ -296,17 +296,6 @@ grid-row-end: 3;
     margin: 1rem;
 }
 
-
-.footer {
-background-color: var(--rosa);
-text-align: center;
-color: var(--grisclaro);
-letter-spacing: 1pt;
-margin-top: 3rem;
-padding: 3rem;
-}
-
-
 /*Seccion Mis Proyectoss*/
 #proyectos {
 display: grid;
@@ -316,7 +305,8 @@ margin: 0 auto;
 max-width: 88%;
 }
 #proyectos .sombra {
-padding: 1rem;
+padding: 2.5rem;
+min-height: 32rem;
 }
 .proyecto {
 background-color: var(--rosa);
@@ -351,3 +341,12 @@ gap: 2rem;
 max-width: 100%;
 }
 }
+
+.footer {
+    background-color: var(--celeste);
+    text-align: center;
+    color: var(--grisclaro);
+    letter-spacing: 1pt;
+    margin-top: 3rem;
+    padding: 3rem;
+    }
