--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,8 @@ html {
 
 .hero,
 .proyectos,
-.estudios {
+.estudios,
+.mas {
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
@@ -40,35 +41,45 @@ body {
     max-width: 120rem;
     margin: 0 auto;
 }
+a {
+    text-decoration: none;
+}
 
 .boton {
-    background-color: var(--celeste);
-    color: var(--gris);
+    color: var(--grisclaro);
     padding: 1rem 3rem;
-    margin-top: 1rem;
+    margin: 6rem;
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 500;
     border-radius: .5rem;
     width: 80%;
     text-align: center;
-    border: none;
+    border: 1.5px solid var(--grisclaro);
 }
-
-@media (min-width: 768px) {
-    .boton {
-        width: auto;
-    }
-}
-
-.contactar {
-    margin-bottom: -0.5rem;
+.boton-sobre-mi {
+    color: var(--gris);
+    padding: 1rem 3rem;
+    margin-left: 1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-radius: .5rem;
+    width: 80%;
+    text-align: center;
+    border: 1.5px solid var(--gris);
 }
 
 .boton:hover {
     cursor: pointer;
+    font-weight: bolder;
+    background-color: rgb(0 0 0 /20%);
 }
-
+.boton-sobre-mi:hover {
+    cursor: pointer;
+    font-weight: bolder;
+    background-color: rgb(0 0 0 /5%);
+}
 .sombra {
     -webkit-box-shadow: 0px 5px 15px 0px rgba(20, 20, 20, 0.39);
     box-shadow: 0px 5px 15px 0px rgba(20, 20, 20, 0.39);
@@ -79,28 +90,41 @@ body {
 
 /*tamaños de fuente*/
 h1 {
-    font-size: 4rem;
+    font-size: 6rem;
+    margin-left: 5rem;
+    font-weight: lighter;
+}
+
+h1 span {
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 h2 {
-    font-size: 3.2rem;
-    font-weight: 400;
-    margin-bottom: 1rem;
-    margin-top: 2rem;
+    font-size: 4rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-left: 5rem;
+    margin-bottom: 2rem;
 }
 
 h3 {
-    font-size: 2.5rem;
-    font-weight: 600;
+    font-size: 3.5rem;
+    font-weight: 400;
 }
+
+h4 {
+    font-size: 3rem;
+    font-weight: 400;
+    margin: 2rem auto;
+}
+
 
 p {
     font-size: 1.8rem;
     font-weight: 400;
 }
 
-h1,
-h2,
 h3,
 h4 {
     text-align: center;
@@ -109,29 +133,102 @@ h4 {
     flex-direction: row;
 }
 
-a {
-    text-decoration: none;
+@media (max-width: 768px) {
+    h1 {
+        font-size: 5rem;
+    }
+    h2 {
+        font-size: 3.0rem;
+    }
+
+    h3 {
+        font-size: 2.5rem;
+    }
+    h4{
+        font-size: 2.4rem;
+    }
+    p {
+        font-size: 1.7rem;
+    }
+}
+
+@media (max-width: 540px) {
+    h1 {
+        font-size: 4.3rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 2.3rem;
+    }
+    h4{
+        font-size: 2.2rem;
+    }
+
+    p {
+        font-size: 1.6rem;
+    }
+}
+
+@media (max-width: 414px) {
+    h1 {
+        font-size: 2.8rem;
+    }
+
+    h2 {
+        font-size: 1.9rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+    h4{
+        font-size: 1.9rem;
+    }
+
+    p {
+        font-size: 1.6rem;
+    }
+} 
+
+@media (max-width: 379px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 1.4rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
+    h4{
+        font-size: 1.4rem;
+    }
+
+    p {
+        font-size: 1.4rem;
+    }
+}
+@media (max-width: 260px) {
+    p {
+        font-size: 1.3rem;
+    }
 }
 
 /*titulo*/
 .titulo-yulia {
-    background-color: var(--rosa);
     font-family: 'Dawning of a New Day', cursive;
-    font-weight: lighter;
     color: var(--grisclaro);
-    padding: 1rem;
     animation-duration: 10s;
 }
 
 .titulo {
     font-family: 'Titillium Web', sans-serif;
-}
-
-@media (max-width: 480px) {
-    .titulo-yulia {
-        display: grid;
-        justify-content: center;
-    }
 }
 
 /*Utilidades*/
@@ -150,13 +247,10 @@ a {
     display: flex;
 }
 
-.alinear-derecha {
-    justify-content: flex-end;
-}
-
+/*Menú de navegación*/
 .navegacion-principal {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: end;
 }
 
 @media (max-width: 768px) {
@@ -178,8 +272,13 @@ a {
     background-color: var(--grisclaro);
 }
 
+.navegacion-principal .subrayar {
+    text-transform: uppercase;
+}
+
 .navegacion-principal a:hover {
     font-weight: 600;
+    background-color: var(--rosaclaro);
 }
 
 @media (min-width: 768px) {
@@ -198,22 +297,17 @@ a {
     height: auto;
 }
 
-/*Sección diseño y desarrollo web + Ubicación (Rosario)*/
+
+/*Hero*/
 .hero {
-    background-image: url(../imagenes/social\ media\ rosario\ fondo.jpg);
+    background-image: url(../imagenes/background-galaxia-yulia.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 500px;
+    height: 90rem;
     color: #fafafa;
     position: relative;
     margin-bottom: 2rem;
-}
-
-@media (max-width: 768px) {
-    .hero {
-        background-position: 80% 0;
-    }
 }
 
 .contenido-hero {
@@ -223,13 +317,40 @@ a {
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
-.contenido-hero H2,
+.contenido-hero h2,
 .contenido-hero p {
     color: var(--grisclaro);
+}
+
+.astronauta {
+    position: absolute;
+    bottom: 20rem;
+    right: 30rem;
+}
+
+@media (max-width: 1070px) {
+    .astronauta {
+        right: 10rem;
+    }
+}
+@media (max-width: 880px) {
+    .astronauta {
+        position: inherit;
+    }
+}
+@media (max-width: 880px) {
+    .astronauta {
+width: 80%;    
+}
+}
+@media (max-width: 250px) {
+    .astronauta {
+        visibility: hidden;
+    } 
 }
 
 /*Seccion Mis Proyectos*/
@@ -239,7 +360,6 @@ a {
 }
 
 #proyectos {
-
     min-height: 25rem;
 }
 
@@ -272,11 +392,6 @@ a {
     }
 }
 
-.proyecto,
-h3,
-p {
-    color: var(--gris);
-}
 
 .proyecto img {
     margin: auto;
@@ -312,7 +427,7 @@ p {
     }
 }
 
-/*Seccion skills*/
+/*Seccion Tech stack*/
 .skills {
     color: var(--gris);
     font-weight: 500;
@@ -321,7 +436,7 @@ p {
     column-gap: 1rem;
     justify-items: center;
     margin: auto;
-    padding-bottom: 5rem;
+    padding: 4rem;
 }
 
 .skills img {
@@ -345,12 +460,130 @@ p {
     }
 }
 
-@media (max-width: 215px) {
+@media (max-width: 280px) {
     .skills {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
+.ml {
+    margin-left: 3rem;
+    margin-right: 1rem;
+}
+
+/*Sobre mi*/
+.titulo-sobre-mi {
+    font-family: 'Dawning of a New Day', cursive;
+    margin: 0;
+}
+
+.subtitulo {
+    margin: 0;
+}
+
+.sobre-mi {
+    position: absolute;
+    background-color: rgb(0 0 0 /60%);
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.sobre-mi h3 {
+    color: var(--grisclaro);
+    text-align: left;
+}
+
+/*Astronauta sobre-mi*/
+.a-sobre-mi {
+    bottom: 30rem;
+    right: 4rem;
+}
+
+@media (max-width: 880px) {
+    .a-sobre-mi {
+        position: absolute;
+        right: 0;
+        width: 45%;
+        bottom: 36rem;
+    }
+}
+@media (max-width: 775px) {
+    .a-sobre-mi {
+        position: absolute;
+        right: 0;
+        width: 45%;
+        bottom: 36rem;
+    }
+}
+
+
+@media (max-width: 666px) {
+    .a-sobre-mi {
+        width: 46%;
+        bottom: 0;
+    }
+}
+
+@media (max-width: 445px) {
+    .a-sobre-mi {
+        width: 48%;
+    }
+}
+
+@media (max-width: 414px) {
+    .a-sobre-mi {
+        width: 50%;
+    }
+}
+
+@media (max-width: 379px) {
+    .a-sobre-mi {
+        width: 65%;
+    } 
+}
+@media (max-width: 310px) {
+    .a-sobre-mi {
+        width: 45%;
+    } 
+}
+@media (max-width: 250px) {
+    .a-sobre-mi {
+        visibility: hidden;
+    } 
+}
+
+/*Mas sobre mi*/
+#mas {
+    margin: 0 auto;
+    width: auto;  
+}
+
+.mas {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+}
+@media (max-width: 768px) {
+    .mas {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+.descripcion-sobre-mi h4 {
+    text-align: left;
+    text-transform: uppercase;
+    margin-left: 1rem;
+}
+@media (max-width: 768px) {
+    .descripcion-sobre-mi h4 {
+        text-align: center;
+    }
+}
+/*Footer*/
 .footer {
     background-color: var(--celeste);
     text-align: center;
