--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*GLOBALES*/
+/*GLOBALES..................*/
 :root {
     /*Colores de la marca*/
     --violeta: #240e4b;
@@ -30,9 +30,8 @@ body {
     font-family: 'Titillium Web', sans-serif;
     background-image: linear-gradient(to top, var(--rosaclaro) 0%, var(--grisclaro) 100%);
 }
-/*Utilidades*/
+/*Utilidades.....................*/
 .w-sm-100 {
-    /*en pequeño que tome el 100%*/
     width: 100%;
 }
 .contenedor {
@@ -52,7 +51,7 @@ a {
 /*BOTONES: Hero - Sección sobre-mi - Página sobre-mi*/
 .boton {
     color: var(--grisclaro);
-    padding: 1rem 3rem;
+    padding: 1rem 2.4rem;
     margin-left: min(5rem, 1vw);
     text-transform: uppercase;
     font-weight: 500;
@@ -61,11 +60,17 @@ a {
     text-align: center;
     border: 1.5px solid var(--grisclaro);
 }
+@media (max-width: 320px) {
+    .boton {
+        padding: 1rem 2rem;
+        border: none;
+    }
+}
 .boton-sobre-mi {
     color: var(--grisclaro);
     background-color: var(--violeta);
-    padding: 1rem 3rem;
-    margin-left: 1rem;
+    padding: 1rem 2.4rem;
+    margin-left: min(5rem, 1vw);
     text-transform: uppercase;
     font-weight: 600;
     border-radius: 5rem;
@@ -91,13 +96,14 @@ a {
     background-color: #240e4bbb;
 }
 
-/*tamaños de fuente*/
+/*tamaños de fuente.................*/
 h1 {
     font-size: clamp(3rem, 5vw, 6rem);
     margin-left: min(5rem, 1vw);
     font-weight: lighter;
 }
 h1 span {
+    font-size: clamp(2.4rem, 5vw, 6rem);
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -130,7 +136,7 @@ h4 {
     flex-direction: row;
 }
 
-/*Menú de navegación*/
+/*Menú de navegación...............*/
 .navegacion-principal {
     display: flex;
     flex-direction: row;
@@ -156,7 +162,7 @@ h4 {
     font-weight: 600;
     background-color: #240e4b38;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
     .mobile-menu {
         display: none;
     }
@@ -170,7 +176,7 @@ h4 {
     height: auto;
 }
 
-/*Hero.........*/
+/*Hero.............................*/
 .hero {
     background-image: url(../imagenes/background-galaxia-yulia-min.jpg);
     background-repeat: no-repeat;
@@ -187,13 +193,47 @@ h4 {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-auto-rows: 50rem;
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, 33rem), 50%));
-    padding: max(7vw, 2rem);
+    grid-auto-rows: 30rem;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 30rem), 50%));
+    padding: max(10vw, 2rem);
+}
+@media (max-width: 768px) {
+    .contenido-hero {
+        grid-auto-rows: 25rem;
+        grid-template-columns: repeat(auto-fit, minmax(min(102%, 31rem), 51%));
+    }
+}
+@media (max-width: 500px) {
+    .contenido-hero {
+/*         grid-template-columns: repeat(auto-fit, minmax(min(102%, 31rem), 51%)); */
+        padding: max(15vw, 2rem);
+    }
+}
+@media (max-width: 185px) {
+    .contenido-hero {
+        grid-auto-rows: 30rem;
+        padding: max(1vw, 1rem);
+    }
 }
 .astronauta {
-    width: max(300px, 35%);
+    width: max(400px, 100%);
 }
+@media (max-width: 500px) {
+    .astronauta {
+        width: max(300px, 100%);
+    }
+} 
+@media (max-width: 333px) {
+    .astronauta {
+        width: max(250px, 100%);
+    }
+} 
+@media (max-width: 235px) {
+    .astronauta {
+        width: max(150px, 100%);
+    }
+} 
+
 .titulo-yulia {
     font-family: 'Dawning of a New Day', cursive;
     color: var(--grisclaro);
@@ -203,7 +243,7 @@ h4 {
     font-family: 'Titillium Web', sans-serif;
 }
 
-/*Seccion Mis Proyectos*/
+/*Seccion Mis Proyectos............*/
 #proyectos {
     min-height: 25rem;
 }
@@ -260,26 +300,32 @@ h4 {
     }
 }
 
-/*Seccion Tech stack*/
+/*Seccion Tech stack...................*/
 .skills {
     color: var(--gris);
     font-weight: 500;
     display: grid;
-    gap: 1rem;
     grid-auto-rows: 8rem;
-    grid-template-columns: repeat(auto-fill, minmax(11rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     justify-items: center;
-    padding: 1rem;
+    padding: min(5rem, 1vw);
+}
+@media (max-width: 613px) {
+    .skills{
+    grid-template-columns: repeat(auto-fill, minmax(7rem, 1fr));
+    }
 }
 .skills img {
     margin: 1rem;
+    width: min(6rem, 30vw);
 }
+
 .ml {
     margin-left: 3rem;
     margin-right: 1rem;
 }
 
-/*Sección Sobre mi*/
+/*Sección Sobre mi..................*/
 .titulo-sobre-mi {
     font-family: 'Dawning of a New Day', cursive;
     margin: 0;
@@ -301,47 +347,7 @@ h4 {
     text-align: left;
 }
 
-/*Página sobre mi*/
-#mas {
-    margin: 0 auto;
-    width: auto;  
-}
-.mas {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    padding: clamp(3em, 4vw, 2em);
-}
-@media (max-width: 768px) {
-    .mas {
-        flex-direction: column;
-        text-align: center;
-    }
-}
-.descripcion-sobre-mi h4 {
-    text-align: left;
-    margin-left: 1rem;
-}
-@media (max-width: 768px) {
-    .descripcion-sobre-mi h4 {
-        text-align: center;
-    }
-}
-.menuSM {
-    margin: 1rem;
-    color: var(--violeta);
-    text-transform: uppercase;
-    font-weight: 700;
-    display: flex;
-    justify-content: center;
-}
-.menuSM a:hover {
-    color: #353637;
-    font-weight: 600;
-    background-color: var(--rosaclaro);
-}
-
-/*Footer*/
+/*Footer...............*/
 .footer {
     text-align: center;
     color: var(--violeta);
@@ -375,4 +381,52 @@ margin: 0;
         flex-direction: column;
         align-items: center;
     }
+}
+/*Página sobre mi........................*/
+.hero-sm {
+    background-image: url(../imagenes/background-galaxia-yulia-min.jpg);
+    background-size: cover;
+    height: 110rem;
+    color: #fafafa;
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+#mas {
+    margin: 0 auto;
+    width: auto;  
+}
+.mas {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    padding: clamp(0em, 4vw, 2em);
+}
+@media (max-width: 768px) {
+    .mas {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+.descripcion-sobre-mi h4 {
+    text-align: left;
+    margin-left: 1rem;
+}
+@media (max-width: 768px) {
+    .descripcion-sobre-mi h4 {
+        text-align: center;
+    }
+}
+.menuSM {
+    margin: 1rem;
+    color: var(--violeta);
+    text-transform: uppercase;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+}
+.menuSM a:hover {
+    color: #353637;
+    font-weight: 600;
+    background-color: var(--rosaclaro);
 }
