--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@
 *:before,
 *:after {
     box-sizing: inherit;
-    Margin: 0;
-    Padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-    font-size: 16px;
+    font-size: 1.6rem;
     font-family: 'Titillium Web', sans-serif;
     background-image: linear-gradient(to top, var(--rosaclaro) 0%, var(--grisclaro) 100%);
 }
@@ -50,7 +50,7 @@ a {
 }
 
 .a-color {
-    color: #240e4b;
+    color: var(--violeta);
     font-weight: 400;
 }
 
@@ -74,30 +74,11 @@ a {
     border: 1.5px solid var(--grisclaro);
 }
 
-@media (max-width: 320px) {
-    .boton {
-        padding: 1rem 2rem;
-        border: none;
-    }
-}
-
-.boton-sobre-mi {
-    color: #353637;
-    border: 1.5px solid var(--gris);
-}
-
-.boton-sm {
-    color: var(--grisclaro);
-    text-transform: uppercase;
-    border-radius: 4rem;
-    padding: 1rem 3rem;
-}
-
 .boton:hover,
 .boton-sm:hover {
     cursor: pointer;
     font-weight: bolder;
-    background-color: rgb(0 0 0 /20%);
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .boton-sobre-mi:hover,
@@ -178,7 +159,7 @@ h4 {
 
 .navegacion-principal a:hover {
     font-weight: 600;
-    background-color: #f590b24a;
+    background-color: rgba(245, 144, 178, 0.29);
 }
 
 @media (min-width: 769px) {
@@ -204,14 +185,14 @@ h4 {
     background-size: cover;
     background-attachment: fixed;
     height: 70rem;
-    color: #fafafa;
+    color: var(--grisclaro);
     position: relative;
     margin-bottom: 2rem;
 }
 
 .contenido-hero {
     position: absolute;
-    background-color: rgb(0 0 0 /55%);
+    background-color: rgba(0, 0, 0, 0.55);
     width: 100%;
     height: 100%;
     padding: max(10vw, 2rem);
@@ -223,7 +204,6 @@ h4 {
     }
 
     .contenido-hero {
-        /*         grid-template-columns: repeat(auto-fit, minmax(min(102%, 31rem), 51%)); */
         padding: max(15vw, 2rem);
     }
 }
@@ -235,25 +215,6 @@ h4 {
     }
 }
 
-/* .astronauta {
-    width: max(400px, 100%);
-}
-@media (max-width: 500px) {
-    .astronauta {
-        width: max(300px, 100%);
-    }
-} 
-@media (max-width: 333px) {
-    .astronauta {
-        width: max(250px, 100%);
-    }
-} 
-@media (max-width: 235px) {
-    .astronauta {
-        width: max(150px, 100%);
-    }
-} 
- */
 .titulo-yulia {
     font-family: 'Dawning of a New Day', cursive;
     color: var(--grisclaro);
@@ -358,15 +319,14 @@ h4 {
     margin-right: 1rem;
 }
 
-
 /*Footer...............*/
 .footer {
     text-align: center;
     letter-spacing: 1pt;
     margin-top: 2rem;
     padding: 3.5rem;
-    background-color: #fafafa;
-    color: #240e4b;
+    background-color: var(--grisclaro);
+    color: var(--violeta);
     height: 4rem;
 }
 
@@ -375,10 +335,7 @@ h4 {
 }
 
 .menuFooter {
-    flex-direction: row;
-    justify-content: space-between;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -387,7 +344,6 @@ h4 {
     font-weight: 500;
     font-size: 1.8rem;
     padding: 1rem;
-    max-height: 7vh;
 }
 
 .menuFooter a:hover {
@@ -396,7 +352,6 @@ h4 {
 
 @media (max-width: 768px) {
     .menuFooter {
-        display: flex;
         flex-direction: column;
         align-items: center;
     }
@@ -442,7 +397,7 @@ h4 {
 }
 
 .menuSM a:hover {
-    color: #353637;
+    color: var(--gris);
     font-weight: 600;
     background-color: var(--rosaclaro);
 }
